--- a/package.json
+++ b/package.json
@@ -7,27 +7,30 @@
     "start": "gulp"
   },
   "dependencies": {
-    "express-graphql": "^0.3.0",
+    "express-graphql": "^0.4.0",
     "graphql": "^0.4.2",
     "graphql-relay": "^0.3.0",
-    "react": "^0.14.0-beta3",
-    "react-dom": "^0.14.0-beta3",
-    "react-relay": "^0.1.1",
-    "react-router": "^1.0.0-beta3"
+    "history": "^1.12.5",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-relay": "^0.3.2",
+    "react-router": "^1.0.0-rc3",
+    "react-router-relay": "^0.6.2",
+    "relay-local-schema": "^0.2.1"
   },
   "devDependencies": {
     "babel": "^5.8.21",
     "babel-core": "^5.8.20",
     "babel-loader": "^5.3.2",
-    "babel-relay-plugin": "^0.1.2",
-    "css-loader": "^0.15.6",
+    "babel-relay-plugin": "^0.2.6",
+    "css-loader": "^0.19.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "html-webpack-plugin": "^1.6.0",
     "nodemon": "^1.4.0",
-    "object-assign": "^3.0.0",
+    "object-assign": "^4.0.1",
     "react-hot-loader": "^1.2.8",
-    "sass-loader": "^2.0.0",
+    "sass-loader": "^3.0.0",
     "source-map-support": "^0.3.2",
     "style-loader": "^0.12.3",
     "webpack": "^1.10.5",
