Put in 'material-ui' in package.json and modified BoardList model in database.js and schema

--- a/package.json
+++ b/package.json
@@ -27,9 +27,15 @@
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "html-webpack-plugin": "^1.6.0",
+    "material-ui": "^0.12.4",
     "nodemon": "^1.4.0",
     "object-assign": "^4.0.1",
+    "react-addons-create-fragment": "^0.14.0",
+    "react-addons-pure-render-mixin": "^0.14.0",
+    "react-addons-transition-group": "^0.14.0",
+    "react-addons-update": "^0.14.0",
     "react-hot-loader": "^1.2.8",
+    "react-tap-event-plugin": "^0.2.1",
     "sass-loader": "^3.0.0",
     "source-map-support": "^0.3.2",
     "style-loader": "^0.12.3",
