--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "css-loader": "^0.19.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
+    "gulp-concat-css": "^2.2.0",
     "html-webpack-plugin": "^1.6.0",
     "material-ui": "^0.12.4",
     "nodemon": "^1.4.0",
     "object-assign": "^4.0.1",
     "react-addons-create-fragment": "^0.14.0",
+    "react-addons-css-transition-group": "^0.14.0",
     "react-addons-pure-render-mixin": "^0.14.0",
     "react-addons-transition-group": "^0.14.0",
     "react-addons-update": "^0.14.0",
