--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A minimal React, Relay, GraphQL skeleton.",
   "main": "gulpfile.babel.js",
   "scripts": {
-    "start": "gulp"
+    "start": "gulp",
+    "start-graphiql": "babel-node graphiql/main.js"
   },
   "dependencies": {
     "express-graphql": "^0.4.0",
