--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Engine.",
   "main": "gulpfile.babel.js",
   "scripts": {
-    "postinstall": "npm start",
-    "start": "gulp production",
+    "postinstall": "gulp production-prep",
+    "start": "gulp production-run",
     "start-dev": "gulp",
     "start-graphiql": "babel-node graphiql/main.js"
   },
@@ -19,9 +19,7 @@
     "react-relay": "^0.4.0",
     "react-router": "^1.0.0-rc3",
     "react-router-relay": "^0.7.0",
-    "relay-local-schema": "^0.3.0"
-  },
-  "devDependencies": {
+    "relay-local-schema": "^0.3.0",
     "babel": "^5.8.21",
     "babel-core": "^5.8.20",
     "babel-loader": "^5.3.2",
@@ -52,7 +50,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fortruce/relay-skeleton.git"
+    "url": "https://github.com/openengine/openengine-webpack"
   },
   "keywords": [
     "react",
@@ -60,10 +58,10 @@
     "skeleton",
     "webpack"
   ],
-  "author": "fortruce",
+  "author": "Engine",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/fortruce/relay-skeleton/issues"
+    "url": "https://github.com/openengine/openengine-webpack/issues"
   },
-  "homepage": "https://github.com/fortruce/relay-skeleton"
+  "homepage": "https://github.com/openengine/openengine-webpack"
 }
