--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "material-ui": "^0.13.0",
     "nodemon": "^1.4.0",
     "object-assign": "^4.0.1",
+    "radium": "^0.14.3",
     "react": "^0.14.0",
     "react-addons-create-fragment": "^0.14.0",
     "react-addons-css-transition-group": "^0.14.0",
