--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-relay": "^0.4.0",
     "react-router": "^1.0.0-rc3",
     "react-router-relay": "^0.7.0",
+    "react-scroll": "^0.30.0",
     "react-tap-event-plugin": "^0.2.1",
     "relay-local-schema": "^0.3.0",
     "sass-loader": "^3.0.0",
