--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "babel": "^5.8.21",
     "babel-core": "^5.8.20",
     "babel-loader": "^5.3.2",
+    "babel-plugin-syntax-async-functions": "^6.1.18",
     "babel-relay-plugin": "^0.3.0",
+    "bluebird": "^3.0.5",
     "css-loader": "^0.21.0",
     "express": "^4.13.3",
     "graphql-relay": "^0.3.0",
@@ -26,6 +28,7 @@
     "gulp-live-server": "0.0.29",
     "history": "^1.12.5",
     "html-webpack-plugin": "^1.6.0",
+    "json-loader": "^0.5.3",
     "material-ui": "^0.13.0",
     "nodemon": "^1.4.0",
     "object-assign": "^4.0.1",
@@ -46,8 +49,10 @@
     "react-scroll": "^0.30.0",
     "react-tap-event-plugin": "^0.2.1",
     "relay-local-schema": "^0.3.0",
+    "request": "^2.65.0",
     "source-map-support": "^0.3.2",
     "style-loader": "^0.13.0",
+    "sync-request": "^2.1.0",
     "webpack": "^1.10.5",
     "webpack-dev-server": "^1.10.1"
   },
