--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-relay-plugin": "^0.3.0",
     "bluebird": "^3.0.5",
     "css-loader": "^0.21.0",
+    "dotenv-safe": "^2.0.0",
     "express": "^4.13.3",
     "graphql-relay": "^0.3.0",
     "gulp": "^3.9.0",
