--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-webpack-plugin": "^1.6.0",
     "json-loader": "^0.5.3",
     "material-ui": "^0.13.0",
+    "moment": "^2.10.6",
     "nodemon": "^1.4.0",
     "object-assign": "^4.0.1",
     "radium": "^0.14.3",
