--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "start-dev": "gulp"
   },
   "dependencies": {
-    "babel": "^5.8.21",
-    "babel-core": "^5.8.20",
-    "babel-loader": "^5.3.2",
-    "babel-plugin-syntax-async-functions": "^6.1.18",
-    "babel-relay-plugin": "^0.3.0",
+    "babel-core": "^6.3.15",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-transform-decorators-legacy": "^1.2.0",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-relay-plugin": "^0.6.0",
     "bluebird": "^3.0.5",
     "css-loader": "^0.21.0",
     "debounce": "^1.0.0",
@@ -24,11 +27,11 @@
     "express": "^4.13.3",
     "graphql-relay": "^0.3.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.3.0",
+    "gulp-babel": "^6.1.1",
     "gulp-clean": "^0.3.1",
     "gulp-concat-css": "^2.2.0",
     "gulp-live-server": "0.0.29",
-    "history": "^1.12.5",
+    "history": "~1.13.1",
     "html-webpack-plugin": "^1.6.0",
     "json-loader": "^0.5.3",
     "material-ui": "^0.13.0",
@@ -46,9 +49,9 @@
     "react-dnd-html5-backend": "^2.0.0",
     "react-dom": "^0.14.0",
     "react-hot-loader": "^1.2.8",
-    "react-relay": "^0.4.0",
-    "react-router": "^1.0.0-rc3",
-    "react-router-relay": "^0.7.0",
+    "react-relay": "^0.6.0",
+    "react-router": "^1.0.2",
+    "react-router-relay": "^0.8.0",
     "react-scroll": "^0.30.0",
     "react-tap-event-plugin": "^0.2.1",
     "relay-local-schema": "^0.3.0",
@@ -58,6 +61,11 @@
     "sync-request": "^2.1.0",
     "webpack": "^1.10.5",
     "webpack-dev-server": "^1.10.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   },
   "repository": {
     "type": "git",
